--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src='https://www.google.com/recaptcha/api.js'></script>
     <link rel="stylesheet" href="style.css">
     <title>Registration Form</title>
 </head>
@@ -39,9 +40,11 @@
                   </label>
                 </div>
             </div>
+            <div class="g-recaptcha" data-sitekey="6Ldbdg0TAAAAAI7KAf72Q6uagbWzWecTeBWmrCpJ"></div>
             <div class="btn-main">
-                <button type="submit" name="submit" id="submit" >Submit</button>
+                <button type="submit" name="submit" id="submit" class="fb9">Submit</button>
             </div>
+            
         </form>
         <div class="data-main">
             <h1>Entries</h1>
